--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,11 @@ on: [push, pull_request]
 #########
 # actions
 #########
-# actions/checkout@v3.0.0
-# actions/download-artifact@v3.0.0
-# actions/create-release
-# actions/upload-release-asset
+# actions/checkout@v3.3.0
+# actions/download-artifact@v3.0.2
+# actions/create-release@v1.1.4
+# actions/upload-release-asset@v1.0.2
+# benc-uk/workflow-dispatch@v1.2.2
 # ./.github/actions/get-parent-dir
 # ./.github/actions/install
 # ./.github/actions/test
@@ -27,7 +28,7 @@ jobs:
     steps:
       # checkout commit
       - name: ✔️Checkout commit
-        uses: actions/checkout@v3.0.0
+        uses: actions/checkout@v3.3.0
       # install
       - name: 💿Call Install
         uses: ./.github/actions/install
@@ -56,7 +57,7 @@ jobs:
     steps:
       # checkout commit
       - name: ✔️Checkout commit
-        uses: actions/checkout@v3.0.0
+        uses: actions/checkout@v3.3.0
       # install
       - name: 💿Call Install
         uses: ./.github/actions/install
@@ -80,25 +81,25 @@ jobs:
           python ./resources/ci/common/prepare_manifest.py
 
       # Prepare Release
-      - name: Prepare Release
+      - name: 📀->📦Prepare Release
         run: |
           python ./resources/ci/common/prepare_release.py
 
       # Cleanup Workspace
-      - name: Cleanup Workspace
+      - name: 🧹Cleanup Workspace
         run: |
           python ./resources/ci/common/cleanup.py
 
       # Upload AppVersion Artifact
-      - name: Upload AppVersion Artifact
-        uses: actions/upload-artifact@v3.0.0
+      - name: 🔼Upload AppVersion Artifact
+        uses: actions/upload-artifact@v3.1.2
         with:
           name: appversion-${{ matrix.os-name }}
           path: ${{ steps.parentDir.outputs.parentDir}}/build
 
       # Upload Archive Artifact
-      - name: Upload Archive Artifact
-        uses: actions/upload-artifact@v3.0.0
+      - name: 🔼Upload Archive Artifact
+        uses: actions/upload-artifact@v3.1.2
         with:
           name: archive-${{ matrix.os-name }}
           path: ${{ steps.parentDir.outputs.parentDir}}/deploy
@@ -124,7 +125,7 @@ jobs:
     steps:
       # checkout commit
       - name: ✔️Checkout commit
-        uses: actions/checkout@v3.0.0
+        uses: actions/checkout@v3.3.0
 
       # install dependencies via pip
       - name: 💿Install Dependencies via pip
@@ -139,33 +140,33 @@ jobs:
 
       # download appversion artifact
       - name: 🔽Download AppVersion Artifact
-        uses: actions/download-artifact@v3.0.0
+        uses: actions/download-artifact@v3.0.2
         with:
           name: appversion-${{ matrix.os-name }}
           path: ${{ steps.parentDir.outputs.parentDir }}/build
       # download archive artifact
       - name: 🔽Download Archive Artifact
-        uses: actions/download-artifact@v3.0.0
+        uses: actions/download-artifact@v3.0.2
         with:
           name: archive-${{ matrix.os-name }}
           path: ${{ steps.parentDir.outputs.parentDir }}/deploy
 
       # debug info
-      - name: Debug Info
+      - name: 📝Debug Info
         id: debug_info
         #      shell: bash
         #        git tag ${GITHUB_TAG}
         #        git push origin ${GITHUB_TAG}
         run: |
           GITHUB_TAG="$(head -n 1 ../build/app_version.txt)"
-          echo "::set-output name=github_tag::$GITHUB_TAG"
+          echo "github_tag=$GITHUB_TAG" >> $GITHUB_OUTPUT
           GITHUB_TAG="v${GITHUB_TAG}"
           RELEASE_NAME="Axiom Verge EmoTracker Pack ${GITHUB_TAG}"
           echo "Release Name: ${RELEASE_NAME}"
           echo "Git Tag:      ${GITHUB_TAG}"
 
       # create a release
-      - name: Create a Release
+      - name: 📀->🚀Create a Release (MASTER)
         id: create_release
         uses: actions/create-release@v1.1.4
         env:
@@ -178,7 +179,7 @@ jobs:
         if: contains(github.ref, 'master')
 
       # upload archive asset
-      - name: Upload Archive Asset
+      - name: 🔼Upload Archive Asset (MASTER)
         id: upload-asset
         uses: actions/upload-release-asset@v1.0.2
         env:
@@ -207,7 +208,7 @@ jobs:
     steps:
       # checkout commit
       - name: ✔️Checkout commit
-        uses: actions/checkout@v3.0.0
+        uses: actions/checkout@v3.3.0
       - name: 💿Install Dependencies via pip
         run: |
           python -m pip install pytz requests
@@ -217,13 +218,13 @@ jobs:
         id: packlisting
         run: |
           PACKLISTING_USERNAME="$([[ $(head -n 1 ./resources/app/meta/manifests/repository.txt) =~ ([^\/]*)\/([^:]*)\:(.*) ]] && echo ${BASH_REMATCH[1]})"
-          echo "::set-output name=packlisting_username::$PACKLISTING_USERNAME"
+          echo "packlisting_username=$PACKLISTING_USERNAME" >> $GITHUB_OUTPUT
 
           PACKLISTING_REPOSITORY="$([[ $(head -n 1 ./resources/app/meta/manifests/repository.txt) =~ ([^\/]*)\/([^:]*)\:(.*) ]] && echo ${BASH_REMATCH[2]})"
-          echo "::set-output name=packlisting_repository::$PACKLISTING_REPOSITORY"
+          echo "packlisting_repository=$PACKLISTING_REPOSITORY" >> $GITHUB_OUTPUT
 
           PACKLISTING_BRANCH="$([[ $(head -n 1 ./resources/app/meta/manifests/repository.txt) =~ ([^\/]*)\/([^:]*)\:(.*) ]] && echo ${BASH_REMATCH[3]})"
-          echo "::set-output name=packlisting_branch::$PACKLISTING_BRANCH"
+          echo "packlisting_branch=$PACKLISTING_BRANCH" >> $GITHUB_OUTPUT
 
           echo "Pack Listing Username:    $PACKLISTING_USERNAME"
           echo "Pack Listing Repository:  $PACKLISTING_REPOSITORY"
@@ -231,12 +232,12 @@ jobs:
           echo "Pack Listing Destination: $PACKLISTING_USERNAME/$PACKLISTING_REPOSITORY@refs/heads/$PACKLISTING_BRANCH"
 
       # Update EmoTracker Pack Repository
-      - name: Update EmoTracker Pack Repository
+      - name: Update EmoTracker Pack Repository (MASTER || UNSTABLE)
         id: update-pack-repo
-        uses: benc-uk/workflow-dispatch@v1
+        uses: benc-uk/workflow-dispatch@v1.2.2
         with:
           workflow: Deploy Pages
           repo: ${{ steps.packlisting.outputs.packlisting_username }}/${{ steps.packlisting.outputs.packlisting_repository }}
           ref: ${{ steps.packlisting.outputs.packlisting_branch }}
           token: ${{ secrets.MY_PAT }}
-        if: contains(github.ref, 'master')
+        if: contains(github.ref, 'master') || contains(github.ref, 'unstable')
