--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Axiom Verge Randomizer",
-  "author": "Seraphin Eveles & Mike Trethewey",
+  "author": "Seraphin Eveles & Minnie A. Trethewey",
   "game_name": "Axiom Verge",
   "flags": [], // build from variants
   "package_version": "1.0",
