--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,16 @@ __pycache__/
 # no IDE stuff
 /.vscode
 /.idea
-
-# But do keep tasks file
+# But do keep tasks file, do keep settings file
+!/.vscode/settings.json
 !/.vscode/tasks.json
+
+# no schemas
+/schema/*
+# But do keep layouts, manifest, repository schema
+!/schema/layouts.json
+!/schema/manifest.json
+!/schema/repository.json
 
 # no get pip
 get-pip.py
