Restore getting layouts schema

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,7 @@ __pycache__/
 
 # no schemas
 /schema/*
-# But do keep layouts, manifest, repository schema
-!/schema/layouts.json
+# But do keep manifest, repository schema
 !/schema/manifest.json
 !/schema/repository.json
 
