--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on: [push, pull_request]
 #########
 # actions
 #########
-# actions/checkout@v3.3.0
+# actions/checkout@v3.5.0
 # actions/download-artifact@v3.0.2
 # actions/create-release@v1.1.4
 # actions/upload-release-asset@v1.0.2
@@ -28,13 +28,18 @@ jobs:
     steps:
       # checkout commit
       - name: ✔️Checkout commit
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v3.5.0
       # install
       - name: 💿Call Install
         uses: ./.github/actions/install
         with:
           os-name: ${{ matrix.os-name }}
           python-version: ${{ matrix.python-version }}
+      # Analyze used GitHub Actions
+      - name: Analyze used GitHub Actions
+        shell: bash
+        run: |
+          py ./resources/ci/common/list_actions.py
       # test
       - name: ⏱️Call Test
         uses: ./.github/actions/test
@@ -57,7 +62,7 @@ jobs:
     steps:
       # checkout commit
       - name: ✔️Checkout commit
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v3.5.0
       # install
       - name: 💿Call Install
         uses: ./.github/actions/install
@@ -125,7 +130,7 @@ jobs:
     steps:
       # checkout commit
       - name: ✔️Checkout commit
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v3.5.0
 
       # install dependencies via pip
       - name: 💿Install Dependencies via pip
@@ -208,7 +213,7 @@ jobs:
     steps:
       # checkout commit
       - name: ✔️Checkout commit
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v3.5.0
       - name: 💿Install Dependencies via pip
         run: |
           python -m pip install pytz requests
