--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ __pycache__/
 
 # no schemas
 /schema/*
-# But do keep manifest, repository schema
+# But do keep layouts, manifest, repository schema
+!/schema/layouts.json
 !/schema/manifest.json
 !/schema/repository.json
 
